escaped backslashs in service definition

--- a/src/Bundle/Resources/config/services.yml
+++ b/src/Bundle/Resources/config/services.yml
@@ -1,4 +1,4 @@
 services:
   neoxygen.neoclient:
-    class: "Neoxygen\NeoClient\ServiceContainer"
+    class: "Neoxygen\\NeoClient\\ServiceContainer"
     arguments: ["@service_container"]
