added event system

--- a/src/Bundle/Resources/config/services.yml
+++ b/src/Bundle/Resources/config/services.yml
@@ -2,6 +2,8 @@ services:
   neoxygen.neoclient:
     class: "Neoxygen\\NeoClient\\ServiceContainer"
     arguments: ["@service_container"]
+    calls:
+      - ["addSubscribers"]
 
   data_collector.neoclient:
           class: "Neoxygen\\NeoClient\\Bundle\\DataCollector\\NeoClientDataCollector"
