loggers and event dispatcher are now available outside framework

--- a/spec/Neoxygen/NeoClient/default_config.yml
+++ b/spec/Neoxygen/NeoClient/default_config.yml
@@ -9,8 +9,8 @@ neoclient:
 #    core:
 #      class: "Neoxygen\\NeoClient\\Extension\\NeoClientCoreExtension"
 
-#  loggers:
-#    neoclient:
-#      type: stream
-#      path: /var/log/neoclient.log
-#      level: debug
+  loggers:
+    neoclient:
+      type: stream
+      path: /Users/ikwattro/dev/logs/neoclient.log
+      level: debug
