manually config possible

--- a/src/Resources/config/services.yml
+++ b/src/Resources/config/services.yml
@@ -17,3 +17,7 @@ services:
 
   logger:
     class: "Neoxygen\\NeoClient\\Logger\\LoggerManager"
+
+  event_dispatcher:
+    class: "Symfony\\Component\\EventDispatcher\\ContainerAwareEventDispatcher"
+    arguments: ["@service_container"]
