--- a/src/Resources/config/services.yml
+++ b/src/Resources/config/services.yml
@@ -13,7 +13,7 @@ services:
 
   neoclient.http_client:
     class: "Neoxygen\\NeoClient\\HttpClient\\GuzzleHttpClient"
-    arguments: ["%neoclient.http_client.response_format%","@?logger","@?event_dispatcher"]
+    arguments: ["%neoclient.http_client.response_format%","@?logger","@?event_dispatcher","@neoclient.connection_manager"]
 
   logger:
     class: "Neoxygen\\NeoClient\\Logger\\LoggerManager"
