--- a/composer.json
+++ b/composer.json
@@ -46,5 +46,10 @@
     },
     "config": {
         "bin-dir": "bin"
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.4-dev"
+        }
     }
 }
