commit tx missing command

--- a/src/Resources/extensions/core_commands.yml
+++ b/src/Resources/extensions/core_commands.yml
@@ -25,3 +25,6 @@ neo.rollback_transaction:
 
 neo.push_to_transaction:
   class: "Neoxygen\\NeoClient\\Command\\Core\\CorePushToTransactionCommand"
+
+neo.commit_transaction:
+  class: "Neoxygen\\NeoClient\\Command\\Core\\CoreCommitTransactionCommand"
