--- a/src/Resources/extensions/core_commands.yml
+++ b/src/Resources/extensions/core_commands.yml
@@ -10,6 +10,9 @@ neo.ping_command:
 neo.get_labels_command:
   class: "Neoxygen\\NeoClient\\Command\\Core\\CoreGetLabelsCommand"
 
+neo.get_constraints_command:
+  class: "Neoxygen\\NeoClient\\Command\\Core\\CoreGetConstraintsCommand"
+
 neo.get_neo4j_version:
   class: "Neoxygen\\NeoClient\\Command\\Core\\CoreGetVersionCommand"
 
