--- a/src/Resources/config/services.yml
+++ b/src/Resources/config/services.yml
@@ -16,7 +16,7 @@ services:
 
   neoclient.extension_manager:
     class: "Neoxygen\\NeoClient\\Extension\\ExtensionManager"
-    arguments: ["@neoclient.command_manager","@neoclient.response_formatter", "%neoclient.auto_format_response%", "%neoclient.result_data_content%"]
+    arguments: ["@neoclient.command_manager","@neoclient.connection_manager","@neoclient.response_formatter", "%neoclient.auto_format_response%", "%neoclient.result_data_content%"]
 
   neoclient.response_formatter:
     class: "Neoxygen\\NeoClient\\Formatter\\ResponseFormatterManager"
