HA Mode support finished

--- a/src/Resources/config/services.yml
+++ b/src/Resources/config/services.yml
@@ -9,7 +9,7 @@ services:
 
   neoclient.http_client:
     class: "Neoxygen\\NeoClient\\HttpClient\\GuzzleHttpClient"
-    arguments: ["%neoclient.response_format%","@?logger","@?event_dispatcher","@neoclient.connection_manager"]
+    arguments: ["@?logger","@?event_dispatcher","@neoclient.connection_manager"]
 
   logger:
     class: "Neoxygen\\NeoClient\\Logger\\LoggerManager"
