--- a/src/Resources/config/services.yml
+++ b/src/Resources/config/services.yml
@@ -9,7 +9,7 @@ services:
 
   neoclient.http_client:
     class: "Neoxygen\\NeoClient\\HttpClient\\GuzzleHttpClient"
-    arguments: ["@event_dispatcher","@neoclient.connection_manager"]
+    arguments: ["@event_dispatcher"]
 
   logger:
     class: "Neoxygen\\NeoClient\\Logger\\LoggerManager"
@@ -35,3 +35,13 @@ services:
     arguments: ["@logger"]
     tags:
       - { name: neoclient.service_event_subscriber }
+
+  neoclient.http_event_subscriber:
+      class: "Neoxygen\\NeoClient\\EventListener\\HttpRequestEventSubscriber"
+      arguments: ["@logger"]
+      tags:
+        - { name: neoclient.service_event_subscriber }
+
+  neoclient.request_builder:
+    class: "Neoxygen\\NeoClient\\Request\\RequestBuilder"
+    arguments: ["@neoclient.connection_manager"]
