--- a/.travis.yml
+++ b/.travis.yml
@@ -19,8 +19,7 @@ before_script:
     - mv tests/database_settings.yml.dist tests/database_settings.yml
 
 script:
-    - bin/phpspec run -f dot
-    - bin/phpunit
+    - vendor/phpunit
 
 notifications:
     email: "willemsen.christophe@gmail.com"
