--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ php:
 env:
   - NEO_VERSION="2.1.5"
   - NEO_VERSION="2.1.6"
+  - NEO_VERSION="2.2.0-M01"
 
 before_install:
     - sudo apt-get update > /dev/null
@@ -21,6 +22,7 @@ before_script:
     - mv tests/database_settings.yml.dist tests/database_settings.yml
 
 script:
+    - curl -vvv X POST -d '{"password": "neo4j", "new_authorization_token" : "4287e44985b04c7536c523ca6ea8e67c"}' -H 'Content-Type: application/json' -i http://localhost:7474/user/neo4j/authorization_token
     - vendor/bin/phpunit
 
 notifications:
