--- a/tests/database_settings.yml.dist
+++ b/tests/database_settings.yml.dist
@@ -4,8 +4,8 @@ connections:
     host: localhost
     port: 7474
     auth: true
-    user: user
-    password: s3cr3t
+    user: neo4j
+    password: 4287e44985b04c7536c523ca6ea8e67c
 
   test:
     scheme: http
