--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ before_script:
     - mv tests/database_settings.yml.dist tests/database_settings.yml
 
 script:
-    - curl -vvv X POST -d '{"password": "neo4j", "new_authorization_token" : "4287e44985b04c7536c523ca6ea8e67c"}' -H 'Content-Type: application/json' -i http://localhost:7474/user/neo4j/authorization_token
+    - ./tests/setNeoToken.sh
     - vendor/bin/phpunit
 
 notifications:
