--- a/src/Resources/config/services.yml
+++ b/src/Resources/config/services.yml
@@ -9,7 +9,7 @@ services:
 
   neoclient.http_client:
     class: "Neoxygen\\NeoClient\\HttpClient\\GuzzleHttpClient"
-    arguments: ["@event_dispatcher", "?@neoclient.ha_manager"]
+    arguments: ["%default_timeout%","@event_dispatcher", "?@neoclient.ha_manager"]
 
   neoclient.logger:
     class: "Neoxygen\\NeoClient\\Logger\\LoggerManager"
