--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ php:
 env:
   - NEO_VERSION="2.1.6"
   - NEO_VERSION="2.1.7"
-  - NEO_VERSION="2.2.0-M04"
+  - NEO_VERSION="2.2.0-RC01"
 
 before_install:
     - sudo apt-get update > /dev/null
