--- a/composer.json
+++ b/composer.json
@@ -24,14 +24,14 @@
       "symfony/yaml": "^2.7",
       "symfony/config": "^2.7",
       "symfony/dependency-injection": "^2.7",
-      "symfony/event-dispatcher": "^2.7",
-        "graphaware/neo4j-graphunit": "^1.0"
+      "symfony/event-dispatcher": "^2.7"
     },
     "require-dev": {
         "phpspec/phpspec": "~2.0",
         "phpunit/phpunit": "4.*",
         "bossa/phpspec2-expect": "*",
-        "behat/behat": "~3.0"
+        "behat/behat": "~3.0",
+        "graphaware/neo4j-graphunit": "^1.0"
 
     },
     "autoload": {
