--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,20 @@
 language: php
-
+sudo: false
 php:
     - 5.5
     - 5.6
-    - nightly
+    - 7.0
 
 env:
   - NEO_VERSION="2.1.6"
-  - NEO_VERSION="2.1.7"
   - NEO_VERSION="2.1.8"
-  - NEO_VERSION="2.2.0"
-  - NEO_VERSION="2.2.1"
   - NEO_VERSION="2.2.2"
   - NEO_VERSION="2.2.3"
+
+matrix:
+  allow_failures:
+    - php: 7.0
+
 
 before_install:
     - sudo apt-get update > /dev/null
