--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,15 @@
 {
-    "name": "neoxygen/neoclient",
+    "name": "graphaware/neo4j-php-client",
     "type": "library",
-    "description": "NeoClient is the most advanced Http Client for Neo4j",
+    "description": "Neo4j-PHP-Client is the most advanced Client for Neo4j",
     "keywords": [
         "graph",
+        "database"
         "neo4j",
         "cluster",
         "client",
+        "bolt",
+        "http",
         "high-availibility"
     ],
     "homepage": "http://neoxygen.io",
@@ -14,7 +17,7 @@
     "authors": [
         {
             "name": "Christophe Willemsen",
-            "email": "chris@neoxygen.io"
+            "email": "christophe@graphaware.com"
         }
     ],
     "require": {
@@ -25,28 +28,20 @@
       "symfony/config": "^2.7",
       "symfony/dependency-injection": "^2.7",
       "symfony/event-dispatcher": "^2.7",
-        "graphaware/neo4j-response-formatter": "^1.0"
+      "graphaware/neo4j-response-formatter": "^1.0"
     },
     "require-dev": {
-        "phpspec/phpspec": "~2.0",
-        "phpunit/phpunit": "4.*",
-        "bossa/phpspec2-expect": "*",
-        "behat/behat": "~3.0"
+        "phpunit/phpunit": "4.*"
 
     },
     "autoload": {
         "psr-4": {
-            "Neoxygen\\NeoClient\\": "src/"
+            "GraphAware\\Neo4j\\Client\\": "src/"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "Neoxygen\\NeoClient\\Tests\\": "tests/Neoxygen/NeoClient/Tests"
-        }
-    },
-    "extra": {
-        "branch-alias": {
-            "dev-master": "3.1-dev"
+            "GraphAware\\Neo4j\\Client\\Tests\\": "tests/"
         }
     }
 }
