--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,8 @@ php:
 
 env:
   - NEO_VERSION="2.1.6"
-  - NEO_VERSION="2.1.8"
-  - NEO_VERSION="2.2.2"
-  - NEO_VERSION="2.2.3"
+  - NEO_VERSION="2.2.6"
+  - NEO_VERSION="2.3.0-RC1"
 
 matrix:
   allow_failures:
