--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ php:
 env:
   - NEO_VERSION="2.1.6"
   - NEO_VERSION="2.2.6"
-  - NEO_VERSION="2.3.0-RC1"
+  #- NEO_VERSION="2.3.0-RC1"
 
 matrix:
   allow_failures:
