--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         "http",
         "high-availibility"
     ],
-    "homepage": "http://neoxygen.io",
+    "homepage": "http://graphaware.com",
     "license": "MIT",
     "authors": [
         {
@@ -29,7 +29,7 @@
       "symfony/dependency-injection": "^2.7",
       "symfony/event-dispatcher": "^2.7",
       "graphaware/neo4j-response-formatter": "^1.0",
-        "graphaware/neo4j-common": "^1.2"
+      "graphaware/neo4j-common": "^1.2"
     },
     "require-dev": {
         "phpunit/phpunit": "4.*"
