--- a/.travis.yml
+++ b/.travis.yml
@@ -9,10 +9,7 @@ env:
   - NEO_VERSION="2.1.6"
   - NEO_VERSION="2.2.6"
   - NEO_VERSION="2.3.0"
-
-matrix:
-  allow_failures:
-    - php: 7.0
+  - NEO_VERSION="2.3.1"
 
 
 before_install:
