--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
       "symfony/config": "^2.7",
       "symfony/dependency-injection": "^2.7",
       "symfony/event-dispatcher": "^2.7",
-        "graphaware/neo4j-response-formatter": "^1.0"
+        "graphaware/neo4j-response-formatter": "^1.0",
+        "graphaware/neo4j-common": "^1.12"
     },
     "require-dev": {
         "phpspec/phpspec": "~2.0",
