--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
       "monolog/monolog": "~1.1",
       "symfony/yaml": "^2.7",
       "symfony/event-dispatcher": "^2.7",
-      "graphaware/neo4j-common": "^1.2"
+      "graphaware/neo4j-common": "^1.2",
+        "myclabs/php-enum": "^1.4"
     },
     "require-dev": {
         "phpunit/phpunit": "4.*"
