--- a/composer.json
+++ b/composer.json
@@ -31,17 +31,18 @@
         "myclabs/php-enum": "^1.4"
     },
     "require-dev": {
-        "phpunit/phpunit": "4.*"
+        "phpunit/phpunit": "4.*",
+        "symfony/stopwatch": "^3.0"
 
     },
     "autoload": {
         "psr-4": {
-            "GraphAware\\Neo4j\\": "src/"
+            "GraphAware\\Neo4j\\Client\\": "src/"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "GraphAware\\Neo4j\\Tests\\": "tests/"
+            "GraphAware\\Neo4j\\Client\\Tests\\": "tests/"
         }
     }
 }
