--- a/composer.json
+++ b/composer.json
@@ -23,11 +23,11 @@
       "php": ">= 5.5",
       "guzzlehttp/guzzle": "^6.0",
       "monolog/monolog": "~1.1",
-      "symfony/yaml": "^2.7",
-      "symfony/config": "^2.7",
-      "symfony/dependency-injection": "^2.7",
-      "symfony/event-dispatcher": "^2.7",
-        "graphaware/neo4j-response-formatter": "^1.0"
+      "symfony/yaml": "^2.7|~3.0",
+      "symfony/config": "^2.7|~3.0",
+      "symfony/dependency-injection": "^2.7|~3.0",
+      "symfony/event-dispatcher": "^2.7|~3.0",
+      "graphaware/neo4j-response-formatter": "^1.0"
     },
     "require-dev": {
         "phpspec/phpspec": "~2.0",
