--- a/composer.json
+++ b/composer.json
@@ -24,9 +24,7 @@
       "php": ">= 5.6",
       "graphaware/neo4j-bolt": "^1.0",
       "guzzlehttp/guzzle": "^6.0",
-      "monolog/monolog": "~1.1",
-      "symfony/yaml": "^2.7",
-      "symfony/event-dispatcher": "^2.7",
+      "symfony/event-dispatcher": "^2.7|^3.0",
       "graphaware/neo4j-common": "^1.2",
         "myclabs/php-enum": "^1.4"
     },
