--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,10 @@ language: php
 php:
     - 5.6
     - 7.0
+env:
+  - NEO_VERSION="2.2.6"
+  - NEO_VERSION="2.3.3"
+  - NEO_VERSION="3.0.0"
 
 before_install:
     - sudo apt-get update > /dev/null
