--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,8 @@
     ],
     "require": {
       "php": ">= 5.6",
+      "ext-bcmath": "*",
+      "ext-mbstring": "*",
       "graphaware/neo4j-bolt": "^1.5",
       "guzzlehttp/guzzle": "^6.0",
       "symfony/event-dispatcher": "^2.7|^3.0",
