--- a/composer.json
+++ b/composer.json
@@ -25,14 +25,19 @@
       "ext-bcmath": "*",
       "ext-mbstring": "*",
       "graphaware/neo4j-bolt": "^1.5",
-      "guzzlehttp/guzzle": "^6.0",
       "symfony/event-dispatcher": "^2.7 || ^3.0",
-      "myclabs/php-enum": "^1.4"
+      "myclabs/php-enum": "^1.4",
+      "php-http/httplug": "^1.0",
+      "php-http/message-factory": "^1.0",
+      "php-http/client-common": "^1.0",
+      "php-http/discovery": "^1.0",
+
+      "php-http/message": "^1.0",
+      "php-http/guzzle6-adapter": "^1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "4.*",
         "symfony/stopwatch": "^3.0"
-
     },
     "autoload": {
         "psr-4": {
